# fastapi-chat

./: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0e2fb1dd75d1_.py  b5cb256ac707_init_models.py
api/auth/: __init__.py  crud.py  schemas.py  utils.py  views.py
api/group_chats/: crud.py  schemas.py  views.py
api/group_chats_settings/: crud.py  schemas.py  utils.py  views.py
api/messanger/: schemas.py  views.py
api/messenger/: crud.py  schemas.py  utils.py  views.py
app/: main.py
app/core/: __init__.py  config.py
app/core/models/: __init__.py  chat.py  chat_user_association.py
core/: config.py  db_helper.py  security.py
db/: __init__.py  engine.py  helper.py
models/: __init__.py  chat.py  chat_user_association.py  user.py
mongodb/: __init__.py  helper.py  utils.py
