[tool.poetry]
name = "fastapi-chat"
version = "0.1.0"
description = "description"
authors = ["theandrunique <theandrusyper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
